Create "pre-capstone" folder

--- a/data_wrangling_json/sliderule_dsi_json_exercise.ipynb
+++ b/data_wrangling_json/sliderule_dsi_json_exercise.ipynb
@@ -162,9 +162,9 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "      <th>population</th>\n",
-       "      <th>state</th>\n",
        "      <th>shortname</th>\n",
        "      <th>info.governor</th>\n",
+       "      <th>state</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -172,53 +172,53 @@
        "      <th>0</th>\n",
        "      <td>Dade</td>\n",
        "      <td>12345</td>\n",
-       "      <td>Florida</td>\n",
        "      <td>FL</td>\n",
        "      <td>Rick Scott</td>\n",
+       "      <td>Florida</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Broward</td>\n",
        "      <td>40000</td>\n",
-       "      <td>Florida</td>\n",
        "      <td>FL</td>\n",
        "      <td>Rick Scott</td>\n",
+       "      <td>Florida</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Palm Beach</td>\n",
        "      <td>60000</td>\n",
-       "      <td>Florida</td>\n",
        "      <td>FL</td>\n",
        "      <td>Rick Scott</td>\n",
+       "      <td>Florida</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Summit</td>\n",
        "      <td>1234</td>\n",
-       "      <td>Ohio</td>\n",
        "      <td>OH</td>\n",
        "      <td>John Kasich</td>\n",
+       "      <td>Ohio</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Cuyahoga</td>\n",
        "      <td>1337</td>\n",
-       "      <td>Ohio</td>\n",
        "      <td>OH</td>\n",
        "      <td>John Kasich</td>\n",
+       "      <td>Ohio</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         name  population    state shortname info.governor\n",
-       "0        Dade       12345  Florida        FL    Rick Scott\n",
-       "1     Broward       40000  Florida        FL    Rick Scott\n",
-       "2  Palm Beach       60000  Florida        FL    Rick Scott\n",
-       "3      Summit        1234     Ohio        OH   John Kasich\n",
-       "4    Cuyahoga        1337     Ohio        OH   John Kasich"
+       "         name  population shortname info.governor    state\n",
+       "0        Dade       12345        FL    Rick Scott  Florida\n",
+       "1     Broward       40000        FL    Rick Scott  Florida\n",
+       "2  Palm Beach       60000        FL    Rick Scott  Florida\n",
+       "3      Summit        1234        OH   John Kasich     Ohio\n",
+       "4    Cuyahoga        1337        OH   John Kasich     Ohio"
       ]
      },
      "execution_count": 5,
@@ -603,16 +603,16 @@
     {
      "data": {
       "text/plain": [
-       "Republic of Indonesia              19\n",
        "People's Republic of China         19\n",
+       "Republic of Indonesia              19\n",
        "Socialist Republic of Vietnam      17\n",
        "Republic of India                  16\n",
        "Republic of Yemen                  13\n",
        "Kingdom of Morocco                 12\n",
-       "Nepal                              12\n",
        "People's Republic of Bangladesh    12\n",
-       "Africa                             11\n",
+       "Nepal                              12\n",
        "Republic of Mozambique             11\n",
+       "Africa                             11\n",
        "Name: countryname, dtype: int64"
       ]
      },
@@ -1082,6 +1082,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Alternative method (about 1.5 ms faster):\n",
+    "# df_themes_named = df_themes.sort_values(['code','name'])\n",
+    "# df_themes_named['name'] = df_themes_named.name.replace('',method='bfill')\n",
+    "# df_themes_named = df_themes_named.sort_index()\n",
+    "# df_themes_named"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1090,10 +1105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1112,7 +1127,7 @@
        "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
