Further exploration of stats exercise 2

--- a/statistics_project_2/sliderule_dsi_inferential_statistics_exercise_2.ipynb
+++ b/statistics_project_2/sliderule_dsi_inferential_statistics_exercise_2.ipynb
@@ -240,6 +240,150 @@
    "source": [
     "The *p*-value is very small (and the confidence interval does not contain zero), indicating a statistically significant difference between the callback rates for black-sounding names and for white-sounding names."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Further Exploration:\n",
+    "Building upon Allen Downey's ``HypothesisTest`` class, we can create a test for a difference in proportions \"by permutation\":"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class HypothesisTest(object):\n",
+    "    \"\"\"Represents a hypothesis test.\"\"\"\n",
+    "\n",
+    "    def __init__(self, data):\n",
+    "        \"\"\"Initializes.\n",
+    "\n",
+    "        data: data in whatever form is relevant\n",
+    "        \"\"\"\n",
+    "        self.data = data\n",
+    "        self.MakeModel()\n",
+    "        self.actual = self.TestStatistic(data)\n",
+    "        self.test_stats = None\n",
+    "\n",
+    "    def PValue(self, iters=1000):\n",
+    "        \"\"\"Computes the distribution of the test statistic and p-value.\n",
+    "\n",
+    "        iters: number of iterations\n",
+    "\n",
+    "        returns: float p-value\n",
+    "        \"\"\"\n",
+    "        self.test_stats = np.array([self.TestStatistic(self.RunModel()) \n",
+    "                                       for _ in range(iters)])\n",
+    "\n",
+    "        count = sum(self.test_stats >= self.actual)\n",
+    "        return count / iters\n",
+    "\n",
+    "    def MaxTestStat(self):\n",
+    "        \"\"\"Returns the largest test statistic seen during simulations.\n",
+    "        \"\"\"\n",
+    "        return max(self.test_stats)\n",
+    "\n",
+    "    def PlotHist(self, label=None):\n",
+    "        \"\"\"Draws a Cdf with vertical lines at the observed test stat.\n",
+    "        \"\"\"\n",
+    "        ys, xs, patches = pyplot.hist(ht.test_stats, color=COLOR4)\n",
+    "        pyplot.vlines(self.actual, 0, max(ys), linewidth=3, color='0.8')\n",
+    "        pyplot.xlabel('test statistic')\n",
+    "        pyplot.ylabel('count')\n",
+    "\n",
+    "    def TestStatistic(self, data):\n",
+    "        \"\"\"Computes the test statistic.\n",
+    "\n",
+    "        data: data in whatever form is relevant        \n",
+    "        \"\"\"\n",
+    "        raise UnimplementedMethodException()\n",
+    "\n",
+    "    def MakeModel(self):\n",
+    "        \"\"\"Build a model of the null hypothesis.\n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    def RunModel(self):\n",
+    "        \"\"\"Run the model of the null hypothesis.\n",
+    "\n",
+    "        returns: simulated data\n",
+    "        \"\"\"\n",
+    "        raise UnimplementedMethodException()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class DiffPropsPermute(HypothesisTest):\n",
+    "    \"\"\"Tests a difference in proportions by permutation.\"\"\"\n",
+    "\n",
+    "    def TestStatistic(self, data):\n",
+    "        \"\"\"Computes the test statistic.\n",
+    "\n",
+    "        data: data in whatever form is relevant        \n",
+    "        \"\"\"\n",
+    "        group1, group2 = data\n",
+    "        test_stat = abs(sum(group1)/len(group1) - sum(group2)/len(group2))\n",
+    "        return test_stat\n",
+    "\n",
+    "    def MakeModel(self):\n",
+    "        \"\"\"Build a model of the null hypothesis.\n",
+    "        \"\"\"\n",
+    "        group1, group2 = self.data\n",
+    "        self.n, self.m = len(group1), len(group2)\n",
+    "        self.pool = np.hstack((group1, group2))\n",
+    "\n",
+    "    def RunModel(self):\n",
+    "        \"\"\"Run the model of the null hypothesis.\n",
+    "\n",
+    "        returns: simulated data\n",
+    "        \"\"\"\n",
+    "        np.random.shuffle(self.pool)\n",
+    "        data = self.pool[:self.n], self.pool[self.n:]\n",
+    "        return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we calculate the *p*-value, which is very similar in magnitude to the *p*-value calculated earlier, indicating again a statistically significant difference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.0000000000000002e-05"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ht_data = (data[data.race=='b'].call, data[data.race=='w'].call)\n",
+    "ht = DiffPropsPermute(ht_data)\n",
+    "p_value = ht.PValue(iters=100000)\n",
+    "p_value"
+   ]
   }
  ],
  "metadata": {
