Make some minor edits

--- a/capstone/datastory.ipynb
+++ b/capstone/datastory.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Story *(draft)*:\n",
+    "# Data Story:\n",
     "## Boston Health Inspections\n",
     "\n",
     "The City of Boston, like many others, conducts health inspections of food service establishments in a largely random pattern of visits. But if we could estimate the probability that a health code violation will be found at a given food service establishment, then health inspections could be carried out, at least in part, by targeting the most likely suspects. This would make more efficient use of inspectors' time and, more importantly, increase the chances of detecting violations.\n",
