--- a/capstone/proposal.ipynb
+++ b/capstone/proposal.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Capstone Project Proposal: Predicting Health Code Violations in Boston\n",
+    "# Predicting Health Code Violations in Boston\n",
+    "### Capstone Project Proposal\n",
     "Roy Wright  \n",
-    "June 7, 2016  \n",
+    "June 14, 2016  \n",
     "  \n",
     "\n",
     "## The Problem:\n",
