Adjust features and correct learning curves

--- a/capstone/setup.ipynb
+++ b/capstone/setup.ipynb
@@ -203,8 +203,8 @@
     "    violations['delay'].iloc[row] = t - tlast\n",
     "    s = services[\n",
     "            (services.open < t - timedelta(days = 5)) &\n",
-    "            (services.open > t - timedelta(days = 17)) &\n",
-    "            ((services.latitude - c[0])**2 + (5/7*(services.longitude - c[1]))**2 < 0.0003)\n",
+    "            (services.open > t - timedelta(days = 15)) &\n",
+    "            ((services.latitude - c[0])**2 + (5/7*(services.longitude - c[1]))**2 < 0.0025)\n",
     "    ]\n",
     "    violations.iloc[row,10:55] = s.groupby('reason').count().iloc[:,0][reason].fillna(0).values\n",
     "        \n",
@@ -227,9 +227,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -241,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
