--- a/capstone/text_models.ipynb
+++ b/capstone/text_models.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Attempts at Classifiers Derived from Yelp Reviews Text Data\n",
-    "## Loading text data:\n",
-    "### (See comments in code)"
+    "# Attempts at Classifiers from Yelp Reviews Text Data\n",
+    "## Loading text data:"
    ]
   },
   {
@@ -1559,11 +1558,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training score: 0.667401452282\n",
+      "Testing score: 0.6588906169\n",
+      "Proportion of inspections in test set that failed: 0.656817003629\n"
+     ]
+    }
+   ],
    "source": [
     "vectorizer = TfidfVectorizer(\n",
     "    ngram_range = (1,2), \n",
